@@ -598,9 +598,7 @@ local process_migration = {
         storage.quests.quest_defs = data_quests.quest_defs
         quests.reinitialize_everything()
 
-        -- if quests.is_complete "cant-step-on-that" then
-        --     quests.unlock_feature "teleportation-cross-planet"
-        -- end
+        item_buffs.migrate_buff_changes(data_item_buffs.item_buffs)
     end,
 }
 
